- Added missing replaying status changes.
- Tweaked skip durations of green/yellow (+-60s) and 1/3
  (+-20s) keys in replaying mode.
- Mapped 4/6 (+-5min) and 7/9 (+-15min) keys for longer
  skips in replay mode.

2010-10-10: Version 0.0.4

- Added functionality to abort current fetching.
- Added 'ABRT' and 'LIST' commands for SVDRP interface.
- Tweaked trickplay functionality.
- Enabled jump (red) key in replay mode.
- Fixed possible locking problems in fetcher.
- Added a progress meter for fetching.
- Added Makefile depencency for objects.
- Documented Antti Seppälä as co-author.

2010-10-31: Version 0.0.5

- Updated widget API.
- Added a return back to the recordings menu after exiting
  the player.
- Modified menu layouts.
- Added support for adding/removing timers via service and
  SVDRP interfaces.
- Fixed a possible crash in shutdown.
- Added support for widget data caching.
- Added resume support for recordings via resume.conf.
- Added session support via cookie.conf.
- Added build support with a static json-c library.

2010-11-17: Version 0.0.6

- Updated widget API.
- Fixed some locking issues.
- Increased the player buffer sizes.
- Speeded up the initial recordings menu.
- Fixed CURL data corruption.
- Fixed Saunavisio relogin.

2010-11-21: Version 0.1.0

- Changed blue button functionality in recording menus.
- Added support for MainMenuHooks patch.
- Speeded up EPG, recording, timer, and search timer menus.

2011-01-04: Version 0.1.1

- Added initial support for VODs.
- Added support for LDFLAGS.

2011-01-09: Version 0.1.2

- Fixed a player bug.
- Fixed thread locks.
- Fixed reloading of recording information.
- Limited the download speed.

2011-03-06: Version 0.1.3

- Removed unnecessary mutexes.
- Increased the reader thread priority.
- Reduced CPU load on certain VDR setups.
- Changed duration handling in the player.

2011-05-11: Version 0.2.0

- Updated Makefile.
- Removed Saunavisio support.
- Fixed strtotime() function.